--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Welcome</title>
+  <link rel="stylesheet" type="text/css" href="style.css"> 
+  </head>
 
+  <body>
+
+  </body>
+
+
+</html>
+
+<!--Heyy how you doing today-->
